--- a/luci-app-zerotier/root/usr/share/luci/menu.d/luci-app-zerotier.json
+++ b/luci-app-zerotier/root/usr/share/luci/menu.d/luci-app-zerotier.json
@@ -1,5 +1,5 @@
 {
-	"admin/vpn/zerotier": {
+	"admin/services/zerotier": {
 		"title": "ZeroTier",
 		"action": {
 			"type": "firstchild"
@@ -9,7 +9,7 @@
 			"uci": { "zerotier": true }
 		}
 	},
-	"admin/vpn/zerotier/base": {
+	"admin/services/zerotier/base": {
 		"title": "Base settings",
 		"order": 10,
 		"action": {
@@ -17,7 +17,7 @@
 			"path": "zerotier/base"
 		}
 	},
-	"admin/vpn/zerotier/interface": {
+	"admin/services/zerotier/interface": {
 		"title": "Interface info",
 		"order": 20,
 		"action": {
